add new Assets, folder page, add router and reusable component

--- a/Luvets_Shop/android/build.gradle
+++ b/Luvets_Shop/android/build.gradle
@@ -49,5 +49,12 @@ allprojects {
         }
         google()
         maven { url 'https://www.jitpack.io' }
+
+        mavenLocal()
+        jcenter(){
+            content {
+                includeModule("com.yqritc", "android-scalablevideoview")
+            }
+        }
     }
 }
