--- a/Luvets_Shop/package.json
+++ b/Luvets_Shop/package.json
@@ -18,10 +18,14 @@
     "react-native": "0.69.5",
     "react-native-gesture-handler": "^2.6.0",
     "react-native-paper": "^4.12.4",
+    "react-native-reanimated": "^2.10.0",
+    "react-native-reanimated-carousel": "^3.0.4",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
     "react-native-svg": "^13.0.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-video": "6.0.0-alpha.1",
+    "react-native-video-player": "^0.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
