--- a/Luvets_Shop/package.json
+++ b/Luvets_Shop/package.json
@@ -10,13 +10,21 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-masked-view/masked-view": "^0.2.7",
     "@react-navigation/material-bottom-tabs": "^6.2.3",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/stack": "^6.2.3",
+    "@reduxjs/toolkit": "^1.8.5",
+    "axios": "^0.27.2",
+    "firebase": "^9.9.4",
     "react": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-calendars": "^1.1288.3",
+    "react-native-dropdown-picker": "^5.4.2",
+    "react-native-flash-message": "^0.3.1",
     "react-native-gesture-handler": "^2.6.0",
+    "react-native-image-picker": "^4.10.0",
     "react-native-paper": "^4.12.4",
     "react-native-reanimated": "^2.10.0",
     "react-native-reanimated-carousel": "^3.0.4",
@@ -25,7 +33,12 @@
     "react-native-svg": "^13.0.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-video": "6.0.0-alpha.1",
-    "react-native-video-player": "^0.14.0"
+    "react-native-video-player": "^0.14.0",
+    "react-number-format": "^5.0.0-beta.2",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
